# resume-customizer

./: .gitignore  README.md  pyproject.toml  test.ipynb
on_the_fly_resume/: __main__.py  resume_manager.py
on_the_fly_resume/data/: test_data.yaml
on_the_fly_resume/on_the_fly_resume.egg-info/: PKG-INFO  requires.txt
on_the_fly_resume/templates/: template.jinja
src/: scripts.py
templates/: template.jinja
