[project]
name = "on-the-fly-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "pdflatex>=0.1.3",
    "poethepoet>=0.24.0",
]

[tool.poe.tasks]
build = { script = "scripts:compile_latex" }

[tool.uv]
package = true
